# code-context

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs  module_path.rs  processor.rs  test_utils.rs  transformer.rs
src-code-context/: code_context.rs.txt
src-custom-suffix/: main.rs.txt  module_path.rs.txt  processor.rs.txt  transformer.rs.txt
