[package]
name = "code-context"
version = "0.1.0"
edition = "2021"
authors = ["Arthur Welf"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
syn = { version = "2.0", features = ["full", "visit-mut", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
walkdir = "2.4"
prettyplease = "0.2"
